2009-02-03  Claudio Saavedra  <csaavedra@igalia.com>

	* modulesets/gnome-external-deps-2.26.modules: Update cairo to
	version to 1.8.6

2009-02-03  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.26.modules: remove libgnomeprintui dep of
	tomboy (see bug #512369).

2009-02-03  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.26.modules: glom: Now uses libgdamm trunk, not 
	libgdamm-3.0, and does not depend on libgnome.

2009-02-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: updated telepathy-glib
	to latest released tarball.

2009-02-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: added brasero dependency to
	sound-juicer.

2009-02-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: works around libnice
	extracting to nice-0.0.4/.

2009-02-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: marked the dependency of anjuta
	on devhelp as optional.

2009-02-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: added telepathy-farsight
	dependency to empathy.

2009-02-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	More fix for Bug #569778.

	* patches/samba.configure-for-libs.patch: Adjusted to allow
	non-source-dir configuration via autogen.sh.
	* modulesets/gnome-external-deps-2.26.modules: tdb, talloc and tevent
	now support non-source-dir builds.

2009-02-02  Vivien Malerba  <malerba@gnome-db.org>

	* modulesets/gnome-suites-2.26.modules: updated libgda to 3.99.10

2009-02-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* modulesets/freedesktop-2.26.modules:
	* modulesets/gnome-external-deps-2.26.modules: Mark some modules as
	not supporting non-source-dir builds. Partially fixes #569778.

2009-02-02  Andy Wingo  <wingo@pobox.com>

	* jhbuild/modtypes/__init__.py (Package.to_sxml): Whoops, fix some
	indentation that broke attribute serialization for non-bool
	values.
