@@ -1,3 +1,8 @@
+2009-02-04  John Carr  <john.carr@unrouted.co.uk>
+
+	* jhbuild/modtypes/tarball.py: Forward tarball makeinstallargs on
+	to autotools code.
+
 2009-02-03  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* modulesets/gnome-external-deps-2.26.modules: Update cairo to
